objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Spouse_Account_Roles__c</fullName>
        <label>Spouse Account Roles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Contact Spouse</fullName>
                </value>
                <value>
                    <fullName>Primary Contact Child</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Business Partner Spouse</fullName>
                </value>
                <value>
                    <fullName>Second Business Partner</fullName>
                </value>
                <value>
                    <fullName>Second Business Partner Spouse</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Outside Attorney</fullName>
                </value>
                <value>
                    <fullName>Outside Accountant</fullName>
                </value>
                <value>
                    <fullName>Outside Bookkeeper</fullName>
                </value>
                <value>
                    <fullName>Event Guest</fullName>
                </value>
                <value>
                    <fullName>Contact Spouse</fullName>
                </value>
                <value>
                    <fullName>Anderson Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Contact_Note__c</fullName>
        <label>Spouse Contact Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spouse_E_Mail__c</fullName>
        <label>Spouse E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Spouse_Fax__c</fullName>
        <label>Spouse Work Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Spouse_Last_Name__c</fullName>
        <label>Spouse Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Mobile__c</fullName>
        <label>Spouse Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Spouse_Other_E_Mail__c</fullName>
        <label>Spouse Other E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Spouse_s_First_Name__c</fullName>
        <description>Enter the spouse&apos;s first name</description>
        <label>Spouse&apos;s First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Income__c</fullName>
        <label>Stock Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stock_Investing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Investing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategy_Session_Score__c</fullName>
        <label>Strategy Session Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubmitterIP__c</fullName>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Consult__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Would this person like to contacted by our tax department</description>
        <label>Tax Consult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <formula>X1099_Income__c  +   Dividend_Income__c  +  Investment_Income__c  +  Stock_Income__c  +  W_2_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tour_Date__c</fullName>
        <description>Vertucci Tour Date</description>
        <label>Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The dialer who transfers the call.</description>
        <inlineHelpText>Input name of dialer who transfers the call to Advisors.</inlineHelpText>
        <label>Transferor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <description>Chose the types of existing businesses currently owned by this person</description>
        <label>Type of Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-Corporation</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnbouncePageID__c</fullName>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageVariant__c</fullName>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionDate__c</fullName>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionTime__c</fullName>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Retirement_Acts__c</fullName>
        <description>Enter the value of the retirement accounts</description>
        <label>Value of Retirement Acts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertucci_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vertucci Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Forms_Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field must be added to a form as a hidden checked field to enable auto-assignment rules.</description>
        <label>Formstack Auto-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Forms_Autoresponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field must be added to a form as a hidden checked field to enable auto-response rules.</description>
        <label>Formstack Autoresponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_2_Income__c</fullName>
        <label>W-2 Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>W_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Where_you_heard__c</fullName>
        <description>User selected field of where they heard about the company</description>
        <label>Where you heard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>YouTube</fullName>
                </value>
                <value>
                    <fullName>Anderson Partner</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Online Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Faxs__c</fullName>
        <label>Work Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X1099_Income__c</fullName>
        <label>1099 Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_Sales_Rep__c</fullName>
        <label>2nd Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>X2nd_Sales_Rep</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>akaCRM_RR__Send_to_Rotation_Action_Code__c</fullName>
        <description>Used by the Lead Rotation Engine to track action (insert or update) and owner before the lead processes through the Lead Assignment Rules.</description>
        <inlineHelpText>Used by the Lead Rotation Engine to track action (insert or update) and owner before the lead processes through the Lead Assignment Rules.</inlineHelpText>
        <label>Send to Rotation Action Code</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akaCRM_RR__Send_to_Rotation_Assignment_Date__c</fullName>
        <description>Date the lead was assigned using the Lead Rotation Engine. Used to determine when a user has reached their Daily Cap of assigned leads.</description>
        <inlineHelpText>Date the lead was assigned using the Lead Rotation Engine. Used to determine when a user has reached their Daily Cap of assigned leads.</inlineHelpText>
        <label>Send to Rotation Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>akaCRM_RR__Send_to_Rotation_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field. Used to fire the LeadRotationEngineTrigger after Lead Assignment rules have completed.</description>
        <inlineHelpText>Hidden field. Used to fire the LeadRotationEngineTrigger after Lead Assignment rules have completed.</inlineHelpText>
        <label>Send to Rotation Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>akaCRM_RR__Send_to_Rotation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the lead is to be assigned via the Rotation engine instead of standard lead assignment rules.  Only applies on the CREATION of the record.</inlineHelpText>
        <label>Send to Rotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>box__FolderID__c</fullName>
        <description>This field is used to store the folder id when the files are uploaded to BOX</description>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Campaign_Cookie__c</fullName>
        <description>Raw data from the Campaign Tracker that is captured when a tracked visitor submits the web-to-lead form.</description>
        <inlineHelpText>Raw data from the Campaign Tracker that is captured when a tracked visitor submits the web-to-lead form.</inlineHelpText>
        <label>Campaign Cookie</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cloudamp__GAC_Campaign__c</fullName>
        <description>No longer in use: Campaign data from the Google Analytics Cookie</description>
        <inlineHelpText>No longer in use: Campaign data from the Google Analytics Cookie</inlineHelpText>
        <label>Not in use - GAC Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GAC_Keyword__c</fullName>
        <description>No longer in use: Keyword data from the Google Analytics Cookie</description>
        <inlineHelpText>No longer in use: Keyword data from the Google Analytics Cookie</inlineHelpText>
        <label>Not in use - GAC Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GAC_Medium__c</fullName>
        <description>No longer in use: Medium data from the Google Analytics Cookie</description>
        <inlineHelpText>No longer in use: Medium data from the Google Analytics Cookie</inlineHelpText>
        <label>Not in use - GAC Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GAC_Source__c</fullName>
        <description>No longer in use: Source data from the Google Analytics Cookie</description>
        <inlineHelpText>No longer in use: Source data from the Google Analytics Cookie</inlineHelpText>
        <label>Not in use - GAC Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Campaign__c</fullName>
        <description>utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product.</description>
        <inlineHelpText>utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product.</inlineHelpText>
        <label>UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Content__c</fullName>
        <description>utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad. For example, if you have two call-to-action links within the same email message, you can use utm_content and set different values for each so you can tell which version is more effective.</description>
        <inlineHelpText>utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad.</inlineHelpText>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Medium__c</fullName>
        <description>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter.</description>
        <inlineHelpText>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter.</inlineHelpText>
        <label>UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Source__c</fullName>
        <description>utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard.</description>
        <inlineHelpText>utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard.</inlineHelpText>
        <label>UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Term__c</fullName>
        <description>utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword</description>
        <inlineHelpText>utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword</inlineHelpText>
        <label>UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Tracked__c</fullName>
        <formula>IF( cloudamp__GA_Tracker_Score__c  &gt; 0, &quot;Tracked&quot;, &quot;Not Tracked&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GA Tracked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Tracker_Score__c</fullName>
        <description>A score of 0-5 that simply indicates how many of the Google Analytics Campaign parameters were captured from the URL the visitor clicked on.</description>
        <formula>IF( ISBLANK( cloudamp__GA_Campaign__c ) , 0, 1)  +  IF( ISBLANK( cloudamp__GA_Content__c ) , 0, 1)  +  IF( ISBLANK(  cloudamp__GA_Medium__c  ) , 0, 1)  +  IF( ISBLANK(  cloudamp__GA_Source__c  ) , 0, 1)  +  IF( ISBLANK(  cloudamp__GA_Term__c  ) , 0, 1)</formula>
        <inlineHelpText>A score of 0-5 that simply indicates how many of the Google Analytics Campaign parameters were captured from the URL the visitor clicked on.</inlineHelpText>
        <label>GA Tracker Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloudamp__Initial_Source__c</fullName>
        <description>This field tracks the Lead initial referral source from the session history data.</description>
        <label>Initial Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Keyword__c</fullName>
        <description>The search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</description>
        <inlineHelpText>The search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</inlineHelpText>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Lead_Source_Type__c</fullName>
        <description>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</description>
        <inlineHelpText>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</inlineHelpText>
        <label>Lead Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cloudamp__Noncampaign_Lead_Type__c</fullName>
        <formula>IF(cloudamp__GAC_Medium__c = &quot;referral&quot;, &quot;Referral&quot;,  IF( cloudamp__GAC_Campaign__c  = &quot;(direct)&quot;, &quot;Direct&quot;,  IF(cloudamp__GAC_Medium__c = &quot;organic&quot;, &quot;Organic&quot;, IF( cloudamp__Paid_Search__c = true, &quot;Paid Search&quot;, null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Campaign Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Paid_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means they clicked on an organic search result, or the visit was not a search.</description>
        <inlineHelpText>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means it was an organic search result or it was not search.</inlineHelpText>
        <label>Paid Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cloudamp__Referrer__c</fullName>
        <description>The Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</description>
        <inlineHelpText>The Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</inlineHelpText>
        <label>Referrer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cloudamp__Search_Engine__c</fullName>
        <description>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</description>
        <inlineHelpText>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</inlineHelpText>
        <label>Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__data__c</fullName>
        <description>This is the integration field where tracking data from the CloudAmp Campaign Tracker goes into newly created leads.</description>
        <inlineHelpText>This is the integration field where tracking data from the CloudAmp Campaign Tracker goes into newly created leads.</inlineHelpText>
        <label>data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cloudamp__gclid__c</fullName>
        <description>The Ad click ID from Google Adwords.</description>
        <inlineHelpText>The Ad click ID from Google Adwords.</inlineHelpText>
        <label>gclid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Web2Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Web2Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gcl_id__c</fullName>
        <label>Google Click ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Action__c</fullName>
        <label>Distribution action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>n2de__DE_Status__c</fullName>
        <externalId>true</externalId>
        <label>DE Classifier Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__DE_Territory__c</fullName>
        <description>Deprecated, use Distribution_engine_details__c.Territory__c instead</description>
        <label>DE Territory (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_count__c</fullName>
        <description>The number of times this record has been assigned via Distribution Engine</description>
        <inlineHelpText>The number of times this record has been assigned via Distribution Engine</inlineHelpText>
        <label>Distribution count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_engine_details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Engine details</label>
        <referenceTo>n2de__Distribution_engine_details__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Is_archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is auto reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_trigger_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_archive_date__c</fullName>
        <label>Last archive date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distributed__c</fullName>
        <label>Last distributed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_reassigned__c</fullName>
        <label>Last reassigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_rejected__c</fullName>
        <description>Date &amp; time that the DE assignment of this lead was last rejected</description>
        <inlineHelpText>Date &amp; time that the DE assignment of this lead was last rejected</inlineHelpText>
        <label>Last rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Source_queue__c</fullName>
        <label>Source queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Time_to_action_mins__c</fullName>
        <label>Time to action (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>